@@ -44,6 +44,7 @@ https://github.com/elastic/beats/compare/v6.0.0...master[Check the HEAD diff]
 
 - Fix map overwrite in docker diskio module. {issue}5582[5582]
 - Fix connection leak in mongodb module. {issue}5688[5688]
+- Fix the include top N processes feature for cases where there are fewer processes than N. {pull}5729[5729]
 
 *Packetbeat*
 
